# pointer-MVC

./: CMakeLists.txt  README.md  clicker  clicker_controller.cpp  clicker_controller.h  clicker_model.cpp  clicker_model.h  clicker_view.cpp  clicker_view.h  controler.cpp  controller.cpp  controller.h  main.cpp  model.cpp  model.h  view.cpp  view.h
